# Backtester

./: .gitignore  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  original_backtest_function.py  run.ipynb  run.py  run_gp.py  temp.ipynb
barra/: data.py  factor_name_mapping.py  test.ipynb
barra/barra/: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  conversation.md  fac_name_list.pkl  pyproject.toml  site.cfg
barra/barra/src/: config.py  data.py  main.py  prepare_fin_data.py  utils.py
barra/barra/tests/: check_barra_with_tonglian.py  check_fin_data.py  check_null.py  plot_barra_correlation.py  run_one_month_factors.py  test.ipynb  test_factor_calculation.py  test_main.py  test_mysql.py
docs/: account.md  analysis.md  backtest.md  bayesian_optimization_theory.md  financial_metrics.md  para_optimizer_gp.md  portfolio_optimizer.md
etf/: data.ipynb  etf_portfolio_nav_with_capital.py  find_index.py  temp.py
fusion/: run.py
para_optimizer/: backtest.py  config.py  optimizer.py  param_manager.py  plot.py  run.py  utils.py
para_optimizer_bo/: daily_backtest_8.21_multi.py
para_optimizer_ef/: README.md  diverse_efficient_parameters.csv  diverse_efficient_parameters.json  diverse_efficient_parameters_ratio_score.csv  diverse_efficient_parameters_std_ratio_score.json  diverse_efficient_parameters_std_score.csv  diverse_efficient_parameters_std_score.json  model_re_20251128_trade_support7_all_ef_results_std_ratio_score.json  run.ipynb  run.py  run_ratio_score.ipynb  run_std_ratio_score.ipynb  run_std_score.ipynb  temp.ipynb
para_optimizer_gp/: analysis.py  (+6 more)
(+88 files in other folders)
